Copy json data after building the app

--- a/src/Guestline.Console/Guestline.Console.csproj
+++ b/src/Guestline.Console/Guestline.Console.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <Target Name="CopyJson" AfterTargets="Build">
+    <MakeDir Directories="$(OutDir)" />
+    <Copy SourceFiles="data/bookings.json;data/hotels.json" DestinationFolder="$(OutDir)" />
+  </Target>
+
 </Project>
